<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to MovieZone"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.05"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:elevation="4dp" />


    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:background="@drawable/search_box_bg"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:background="@drawable/search_box_bg"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text"
        android:layout_marginBottom="16dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login_button_text"
        android:background="@drawable/button_box_bg"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"/>

    <!-- Register Redirect text -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp" />

</LinearLayout>
