<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    >

    <!--
        Search Section
        Contains the title, input field, and search button
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="30dp">

        <!--
            Title for the Search Page
            Centered white text with bold styling
        -->
        <TextView
            android:id="@+id/searchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:letterSpacing="0.05"
            android:layout_marginBottom="10dp"/>

        <!--
           EditText for entering movie search query
           Styled with rounded corners (see search_box_bg.xml)
       -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/search_hint"
            android:background="@drawable/search_box_bg"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <!--
            Search Button
            Styled with Netflix-red background and rounded corners (see button_box_bg.xml)
        -->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/search_button_text"
            android:textColor="@color/white"
            android:background="@drawable/button_box_bg"
            android:padding="12dp"/>
    </LinearLayout>


    <!--
        RecyclerView for displaying search results
        Will be filled dynamically by the adapter (MovieAdapter)
    -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:clipToPadding="false"
        android:overScrollMode="never"/>
</LinearLayout>
